--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=goktugsenkal\\MSSQLSERVER01;Initial Catalog=paxara;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
+  "ApiUrl": "https://localhost:5001/",
   "AllowedHosts": "*"
 }
