--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,13 @@
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.2",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "bootstrap": "^5.2.3",
     "express": "^4.18.2",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^18.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
