--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=goktugsenkal\\MSSQLSERVER01;Initial Catalog=paxara;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source=goktugsenkal\\MSSQLSERVER01;Initial Catalog=paxara;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "Redis": "localhost"
   },
   "ApiUrl": "https://localhost:5001/",
   "AllowedHosts": "*"
