Added dependencies for "cuid"

--- a/client/angular.json
+++ b/client/angular.json
@@ -23,7 +23,10 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:application",
-          "options": {            
+          "options": {
+            "allowedCommonJsDependencies": [
+              "cuid"
+            ],
             "outputPath": "dist/client",
             "index": "src/index.html",
             "browser": "src/main.ts",
