--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "bootstrap": "^5.2.3",
+    "cuid": "^3.0.0",
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^18.0.2",
